@@ -48,6 +48,8 @@ Application Fixes:
 - Gear, Armor Mods, and Cyberware that are granted for free by something can no longer have their ratings directly altered during character creation.
 - Ammo and Weapon Accessories that modify damage, AP, and/or firing modes now stack appropriately with Ammo and Weapon Accessories that replace damage, AP, and/or firing mods.
 - Weapon Accessories that contain the word "Flechette" in their name no longer lower AP by 5 for weapons with an (f) damage type in a hardcoded fashion.
+- Custom Fit (Stack) now works on armor types other than those in the High-Fashion Armor Clothing category. This is only relevant for custom data.
+- Armor that subtracts from the character's total armor now works properly.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
